update httpapi documentation to add support for clients where http usage is highly abstracted, and GET is not allowed to have payload
